- Fix nav bar spacing - Move amendment title reference styling out of view

--- a/app/assets/stylesheets/primary.css
+++ b/app/assets/stylesheets/primary.css
@@ -16,33 +16,35 @@ html {
         .nav-bar {
             width: 100%;
             height: 100%;
-            padding: 24px 0;
+            padding: 24px 32px;
             background: black;
             justify-content: space-between;
             align-items: center;
-            gap: 8px;
             display: inline-flex;
+            box-sizing: border-box;
 
             .nav-logo-wrapper {
                 width: 185.92px;
                 height: 46px;
                 position: relative;
+                display: flex;
+                justify-content: flex-start;
+                align-items: flex-start;
 
                 .div.nav-logo {
                     width: 185.92px;
                     height: 46px;
                     left: 0px;
                     top: 0px;
-                    position: absolute;
                     background: white
                 }
             }
 
             .nav-item-container {
-                justify-content: flex-start;
-                align-items: flex-start;
-                gap: 40px;
-                display: flex
+                justify-content: flex-end;
+                align-items: flex-end;
+                display: flex;
+                gap: 16px;
             }
 
             .nav-item {
@@ -93,7 +95,7 @@ body {
     align-items: flex-start;
     display: inline-flex;
     box-sizing: border-box;
-    padding: 16px 32px;
+    padding: 16px 0;
 
     /* prelim section */
 
@@ -223,6 +225,15 @@ body {
                 font-weight: 700;
                 line-height: 28px;
                 word-wrap: break-word;
+            }
+
+            .amendment-title-ref {
+                color: #181818;
+                font-size: 20px;
+                font-family: National-LFSN;
+                font-weight: 350;
+                line-height: 28px;
+                word-wrap: break-word
             }
 
             .amendment-text-wrapper {
